--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     ]
   },
   "dependencies": {
-    "enzyme": "^3.11.0",
     "enzyme-to-json": "^3.6.2",
     "fetch-mock": "^9.11.0",
     "gh-pages": "^4.0.0",
@@ -45,6 +44,7 @@
     ]
   },
   "devDependencies": {
-    "@cfaester/enzyme-adapter-react-18": "^0.6.0"
+    "@cfaester/enzyme-adapter-react-18": "^0.6.0",
+    "enzyme": "^3.11.0"
   }
 }
